policies/grafana-enforce-dashboard-folder/tests/overlays/test01/generated/admissionregistration.k8s.io_v1beta1_validatingadmissionpolicybinding_grafana-enforce-dashboard-folder-vap-library-test-test01.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: grafana-enforce-dashboard-folder-vap-library-test-test01
  namespace: grafana-enforce-dashboard-folder-vap-library-test01
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/grafana-enforce-dashboard-folder: deny
    objectSelector: {}
  policyName: grafana-enforce-dashboard-folder.vap-library.com
  validationActions:
  - Deny
