policies/grafana-enforce-dashboard-folder/tests/overlays/test01/generated/v1_configmap_grafana-enforce-dashboard-folder-vap-library-test-test01.yaml
apiVersion: v1
data:
  test: test
kind: ConfigMap
metadata:
  annotations:
    grafana_folder: grafana-enforce-dashboard-folder-vap-library-test01
  labels:
    grafana_dashboard: "1"
  name: grafana-enforce-dashboard-folder-vap-library-test-test01
  namespace: grafana-enforce-dashboard-folder-vap-library-test01
